--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "style:lint": "stylelint 'src/**/*.css' --fix"
   },
   "dependencies": {
     "@meilisearch/instant-meilisearch": "^0.7.0",
@@ -16,6 +17,8 @@
   "devDependencies": {
     "@types/node": "^17.0.25",
     "@vitejs/plugin-vue": "^2.3.1",
+    "stylelint": "^14.7.1",
+    "stylelint-config-twbs-bootstrap": "^3.0.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
     "vue-tsc": "^0.34.7"
