--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
   "devDependencies": {
     "@types/node": "^17.0.25",
     "@vitejs/plugin-vue": "^2.3.1",
+    "cz-conventional-changelog": "^3.3.0",
     "stylelint": "^14.7.1",
     "stylelint-config-twbs-bootstrap": "^3.0.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
     "vue-tsc": "^0.34.7"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
